Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57417

QBluetoothLocalAdapter connected devices don't distinguish local adapter

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.0 Beta 1
    • 5.6.2, 5.8.0
    • None
    • Ubuntu 16.04, BlueZ 5.37

    Description

      In the presence of multiple adapters, QBluetoothLocalAdapter::connectedDevices() returns the list of all connected devices over all adapters for each QBluetoothLocalAdapter object created per local adapter. deviceConnected() and deviceDisconnected() signals seem to be emitted on every single one of them too.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ablasche Alex Blasche
            ayberkozgur Ayberk Özgür
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes