Match connected device changes based on local device instance

A new device connection is only ever for one particular device.
Prior to this patch all local device instances (for different adapters)
assumed the new connection request would be theirs.

Task-number: QTBUG-57417
Change-Id: I0e7ced15cb83df4321284a297ac42b8786f9314b
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>